smooth-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: smooth-app
spec:
  containers:
  - image: busybox
    name: smooth-app
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
