manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grumpy
  namespace: default
  labels:
    name: grumpy
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: grumpy 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grumpy
  namespace: default
  labels:
    name: grumpy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grumpy
  template:
    metadata:
      name: grumpy 
      labels:
        name: grumpy
    spec:
      containers:
        - name: webhook
#         image: pipo02mix/grumpy:1.0.0
          image: sm171190/validatingwebhook:0.1 
          imagePullPolicy: Always
          args:
            - -alsologtostderr
            - --log_dir=/
            - -v=10
            - 2>&1
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: grumpy
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: grumpy
webhooks:
  - name: grumpy.pipo02mix.org
    clientConfig:
      service:
        name: grumpy
        namespace: default
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVGekNDQXY4Q0ZBbzVZanRqRVlVSFU2V1ovNnBxbUwrL0NKSUdNQTBHQ1NxR1NJYjNEUUVCRFFVQU1JSEgKTVFzd0NRWURWUVFHRXdKRVJURVFNQTRHQTFVRUNBd0hRMjlzYjJkdVpURVFNQTRHQTFVRUJ3d0hRMjlzYjJkdQpaVEVQTUEwR0ExVUVFUXdHTkRJME1qUXlNUlF3RWdZRFZRUUpEQXRJWVd4c2J5QWdNVFl5TVRFVE1CRUdBMVVFCkNnd0taMmxoYm5SemQyRnliVEVaTUJjR0ExVUVDd3dRUlcxdmFua2dSR1Z3WVhKMGJXVnVkREVXTUJRR0ExVUUKQXd3TloybGhiblJ6ZDJGeWJTNXBiekVsTUNNR0NTcUdTSWIzRFFFSkFSWVdibTh0Y21Wd2JIbEFaMmxoYm5SegpkMkZ5YlM1cGJ [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
